# python-clean-architecture

./: .gitignore  Dockerfile  Makefile  README.MD  docker-compose.yml  pyproject.toml
